# QuantumVkPrototype

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  premake5.lua
doc/: basics.md
quantum/: quantumvk.hpp
quantum/base/: base.hpp  global.hpp
quantum/lib/volk/: volk.c  volk_build.cpp
quantum/utils/: aligned_alloc.cpp  aligned_alloc.hpp  hashmap.hpp
quantum/vulkan/: command_pool.hpp  context.cpp  context.hpp  vulkan_common.hpp  vulkan_headers.hpp
quantumvk/: LICENSE  quantumvk.hpp
quantumvk/extern_build/: spirv_cross_build.cpp  spirv_cross_include.hpp  vma_build.cpp  vma_include.hpp  volk_build.cpp  volk_include.hpp
quantumvk/threading/: thread_group.cpp  thread_group.hpp  thread_id.cpp  thread_id.hpp
quantumvk/utils/: aligned_alloc.cpp  bitops.hpp  enum_cast.hpp  hash.hpp  intrusive.hpp  intrusive_hash_map.hpp  intrusive_list.hpp  intrusive_tracking_pool.hpp  logging.hpp  object_pool.hpp  retained_alloc.hpp  retained_heap_data.hpp  string_helpers.hpp  temporary_hashmap.hpp  timer.cpp  timer.hpp  variant.hpp
quantumvk/vulkan/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  context.cpp  context.hpp  device.cpp  device.hpp  device_frame_contexts.cpp  device_resources.cpp  device_shaders.cpp  device_submission.cpp  vulkan_common.hpp  vulkan_headers.hpp
quantumvk/vulkan/graphics/: descriptor_set.cpp  descriptor_set.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp
quantumvk/vulkan/images/: format.hpp  image.cpp  image.hpp  sampler.cpp  sampler.hpp  texture_format.cpp  texture_format.hpp
quantumvk/vulkan/memory/: buffer.cpp  buffer.hpp  buffer_pool.cpp  buffer_pool.hpp  memory_allocator.cpp  memory_allocator.hpp
quantumvk/vulkan/misc/: cookie.cpp  cookie.hpp  type_to_string.hpp
quantumvk/vulkan/sync/: event_manager.cpp  event_manager.hpp  fence.cpp  fence.hpp  fence_manager.cpp  fence_manager.hpp  pipeline_event.cpp  pipeline_event.hpp  semaphore.cpp  semaphore.hpp  semaphore_manager.cpp  semaphore_manager.hpp
quantumvk/vulkan/wsi/: wsi.cpp  wsi.hpp  wsi_timing.hpp
src/: LICENSE  quantumvk.hpp
src/base/: base.cpp  global.cpp  global.hpp
src/quantumvk/: quantumvk.hpp
src/quantumvk/base/: common.hpp  vk.hpp  vma.hpp
src/quantumvk/core/: commands.cpp  commands.hpp  debug.cpp  debug.hpp  device.cpp  device.hpp  forward.hpp  impl.hpp  instance.cpp  instance.hpp  loader.cpp  loader.hpp  memory.cpp  memory.hpp  physicalDevice.cpp  physicalDevice.hpp  physical_device.cpp  physical_device.hpp  queue.cpp  queue.hpp  view.cpp  view.hpp
src/quantumvk/factory/: debugFactory.cpp  debugFactory.hpp  debug_factory.cpp  debug_factory.hpp  instanceFactory.cpp  instanceFactory.hpp  instance_factory.cpp  instance_factory.hpp  physicalDeviceSelector.cpp  physicalDeviceSelector.hpp  physical_device_selector.cpp  physical_device_selector.hpp
src/threading/: thread_group.cpp  thread_group.hpp
src/utils/: compile_time_hash.hpp  hash.hpp  intrusive.hpp  intrusive_hash_map.hpp  intrusive_object_pool.hpp  logging.hpp  read_write_lock.hpp  retained_heap_data.hpp  small_vector.hpp  stack_allocator.hpp  string_helpers.cpp  variant.hpp
src/vulkan/: buffer.cpp  buffer.hpp  buffer_pool.cpp  buffer_pool.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  context.cpp  context.hpp  cookie.cpp  cookie.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  device_fossilize.cpp  device_shaders.cpp  device_submission.cpp  fence.hpp  format.hpp  image.hpp  memory_allocator.cpp  memory_allocator.hpp  pipeline_event.hpp  query_pool.hpp  quirks.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  semaphore.hpp  shader.cpp  shader.hpp  texture_format.hpp  thread_id.cpp  thread_id.hpp  type_to_string.hpp  vulkan_common.hpp  vulkan_headers.hpp
src/vulkan/graphics/: descriptor_set.cpp  descriptor_set.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp  spirv_compiler.cpp
src/vulkan/images/: format.hpp  image.cpp  image.hpp  sampler.cpp  sampler.hpp  texture_format.hpp
src/vulkan/managers/: fence_manager.hpp  semaphore_manager.hpp
src/vulkan/memory/: buffer.cpp  buffer.hpp  buffer_pool.cpp  buffer_pool.hpp  memory_allocator.cpp  memory_allocator.hpp  vma_build.cpp
src/vulkan/misc/: cookie.cpp  cookie.hpp  limits.hpp  type_to_string.hpp
src/vulkan/sync/: event_manager.cpp  event_manager.hpp  fence.cpp  fence.hpp  fence_manager.cpp  fence_manager.hpp  pipeline_event.cpp  pipeline_event.hpp  semaphore.cpp  semaphore.hpp  semaphore_manager.cpp  semaphore_manager.hpp
src/vulkan/wsi/: wsi.cpp  wsi.hpp  wsi_timing.cpp  wsi_timing.hpp
tests/example/: CMakeLists.txt  main.cpp
tests/example/glsl/: vertex.spv
tests/samples/basic/glsl/: fragment.spv  shader.frag  shader.vert
